GPC/tests/examples/pass/forLoop.gpc

GPRM::Kernel::Test test;

int forLoop() {
    seq {

    for(int j = 2; j < 10; j += 1) {
        test.m1(j);
        test.m2(j + 1);
    }

    for(int j = 20; j > 3; j -= 2) {
        test.m3(j);
    }
    
    return 1;
    }
}
